[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/hell_beast/HellBeast.gd" type="Script" id=2]
[ext_resource path="res://enemies/hell_beast/sprites/hell-beast-idle.png" type="Texture" id=3]
[ext_resource path="res://enemies/hell_beast/sprites/hell-beast-breath.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19, 27 )

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/IdleSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/AttackSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/AttackSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/IdleSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/AttackSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/IdleSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19, 27 )

[node name="HellBeast" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="IdleSprite" type="Sprite" parent="Sprites" index="0"]
visible = false
texture = ExtResource( 3 )
hframes = 6

[node name="AttackSprite" type="Sprite" parent="Sprites" index="1"]
position = Vector2( -2, 1 )
texture = ExtResource( 4 )
hframes = 4
frame = 3

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
anims/attack = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="PlayerHit" parent="." index="5"]
editor/display_folded = false

[node name="CollisionShape2D" parent="PlayerHit" index="0"]
position = Vector2( 0, 6 )
shape = SubResource( 4 )

[node name="FireballSpawn" type="Position2D" parent="." index="6"]
position = Vector2( -13, 8 )

[node name="AttackCD" type="Timer" parent="." index="7"]
wait_time = 2.0
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="AttackCD" to="." method="_on_AttackCD_timeout"]
